--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-     "dev": "nodemon src/index.ts",
-     "build": "tsc -p ."
+    "start": "npm run build && node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "build": "rimraf ./dist && tsc -p ."
   },
   "keywords": [],
   "author": "",
@@ -24,6 +24,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.4",
+    "rimraf": "^3.0.2",
     "typescript": "^4.7.4"
   }
 }
